// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pagePolicy renders 0 1`] = `
Array [
  .c0 {
  page-policy: 0;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: 0;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: 0;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`pagePolicy renders function 1`] = `
Array [
  .c0 {
  page-policy: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: has;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: has;
}

<div
    className="c0"
  />,
]
`;

exports[`pagePolicy renders invalid theme path 1`] = `
Array [
  .c0 {
  page-policy: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`pagePolicy renders negative number 1`] = `
Array [
  .c0 {
  page-policy: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`pagePolicy renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  page-policy: July;
}

@media screen and (min-width:November) {
  .c0 {
    page-policy: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-policy: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-policy: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-policy: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  page-policy: July;
}

@media screen and (min-width:November) {
  .c0 {
    page-policy: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-policy: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-policy: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-policy: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  page-policy: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    page-policy: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-policy: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-policy: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-policy: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    page-policy: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-policy: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-policy: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-policy: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`pagePolicy renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    page-policy: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-policy: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-policy: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-policy: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    page-policy: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-policy: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-policy: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-policy: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    page-policy: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-policy: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-policy: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-policy: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    page-policy: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-policy: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    page-policy: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    page-policy: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`pagePolicy renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  page-policy: July;
}

@media May {
  .c0 {
    page-policy: August;
  }
}

@media April {
  .c0 {
    page-policy: September;
  }
}

@media January {
  .c0 {
    page-policy: November;
  }
}

@media April {
  .c0 {
    page-policy: August;
  }
}

@media June {
  .c0 {
    page-policy: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  page-policy: July;
}

@media May {
  .c0 {
    page-policy: August;
  }
}

@media April {
  .c0 {
    page-policy: September;
  }
}

@media January {
  .c0 {
    page-policy: November;
  }
}

@media April {
  .c0 {
    page-policy: August;
  }
}

@media June {
  .c0 {
    page-policy: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  page-policy: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    page-policy: November;
  }
}

@media April {
  .c0 {
    page-policy: January;
  }
}

@media January {
  .c0 {
    page-policy: December;
  }
}

@media April {
  .c0 {
    page-policy: April;
  }
}

@media June {
  .c0 {
    page-policy: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    page-policy: November;
  }
}

@media April {
  .c0 {
    page-policy: January;
  }
}

@media January {
  .c0 {
    page-policy: December;
  }
}

@media April {
  .c0 {
    page-policy: April;
  }
}

@media June {
  .c0 {
    page-policy: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`pagePolicy renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    page-policy: July;
  }
}

@media April {
  .c0 {
    page-policy: August;
  }
}

@media January {
  .c0 {
    page-policy: September;
  }
}

@media April {
  .c0 {
    page-policy: November;
  }
}

@media June {
  .c0 {
    page-policy: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    page-policy: July;
  }
}

@media April {
  .c0 {
    page-policy: August;
  }
}

@media January {
  .c0 {
    page-policy: September;
  }
}

@media April {
  .c0 {
    page-policy: November;
  }
}

@media June {
  .c0 {
    page-policy: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    page-policy: January;
  }
}

@media April {
  .c0 {
    page-policy: December;
  }
}

@media January {
  .c0 {
    page-policy: April;
  }
}

@media April {
  .c0 {
    page-policy: May;
  }
}

@media June {
  .c0 {
    page-policy: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    page-policy: January;
  }
}

@media April {
  .c0 {
    page-policy: December;
  }
}

@media January {
  .c0 {
    page-policy: April;
  }
}

@media April {
  .c0 {
    page-policy: May;
  }
}

@media June {
  .c0 {
    page-policy: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`pagePolicy renders postitive number 1`] = `
Array [
  .c0 {
  page-policy: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`pagePolicy renders string 1`] = `
Array [
  .c0 {
  page-policy: July;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: July;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: June;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: June;
}

<div
    className="c0"
  />,
]
`;

exports[`pagePolicy renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`pagePolicy renders valid theme path 1`] = `
Array [
  .c0 {
  page-policy: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  page-policy: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
